--- a/Solutions/recommended-homework-solution/assets/css/style.css
+++ b/Solutions/recommended-homework-solution/assets/css/style.css
@@ -59,7 +59,7 @@ h3 {
   margin: 0 0 30px;
   overflow: auto;
   color: #ffffff;
-  background: #4aa5;
+  background: #ffffff;
   border-bottom: 2px solid #cccccc;
 }
 
