--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+@import url(https://fonts.googleapis.com/css?family=Cherry+Swash);
+
+
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
@@ -33,9 +38,10 @@ p:last-child {
 h1,
 h2,
 h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Cherry Swash';
   font-weight: 700;
-  color: #4aaaa5;
+  color: rgb(4, 4, 34);
+
 }
 
 h1 {
@@ -48,33 +54,39 @@ h1 {
 h2,
 h3 {
   font-size: 22px;
+  font-family: 'Dancing Script';
+
 }
 
 /* header */
 
-#masthead {
+header {
   position: fixed;
   z-index: 99;
   width: 100%;
   margin: 0 0 30px;
   overflow: auto;
   color: #ffffff;
-  background: #ffffff;
+  background: #f7f5f5;
   border-bottom: 2px solid #cccccc;
+  -webkit-box-shadow: 0 -14px 28px rgba(241, 41, 6, 0.938), 0 10px 10px rgba(19, 233, 12, 0.973);
+  box-shadow: 0 -20px 29px rgba(247, 34, 6, 0.973), 0 10px 10px rgba(209, 11, 11, 0.856);
+
 }
 
 #logo {
   float: left;
-  width: 250px;
+  width: 300px;
   height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
+  font-family: 'Pacifico';
+  font-size: 40px;
   font-weight: 700;
   line-height: 90px;
-  color: #ffffff;
+  color: rgb(10, 10, 65);
   text-align: center;
   text-decoration: none;
-  background: #4aaaa5;
+  
+ 
 }
 
 nav {
@@ -105,8 +117,9 @@ footer {
   color: #ffffff;
   color: #cccccc;
   text-align: center;
-  background: #666666;
-  border-top: 8px solid #4aaaa5;
+  background: #00010a;
+  opacity: 0.9;
+  border-top: 8px solid #b41212;
   height: 50px;
 }
 
@@ -122,16 +135,22 @@ h3, h2 {
 #main-container {
   padding-top: 130px;
   min-height: calc(100vh - 70px);
+  
 }
+#connect img {
+  width: 3%;
+  height: 5%;
 
+}
 .main-section {
   float: left;
   width: 100%;
   max-width: 960px;
   padding: 30px;
   margin: 0 0 40px;
-  background: #ffffff;
+  background: rgb(231, 231, 231);
   border: 1px solid #dddddd;
+  border-radius: 25px;
 }
 
 /* portfolio page */
@@ -150,8 +169,10 @@ h3, h2 {
 
 .work img {
   width: 100%;
+  height: 150px;
   border: 0 none;
   opacity: 0.8;
+  
 }
 
 .work h3 {
@@ -164,8 +185,11 @@ h3, h2 {
   line-height: 30px;
   color: #ffffff;
   text-align: center;
-  background: #4aaaa5;
   border-bottom: 0;
+}
+.work h3 {
+  background: black;
+  opacity: 0.8;
 }
 
 .auth-image {
@@ -182,7 +206,7 @@ h3, h2 {
   margin-bottom: 20px;
 }
 
-#contact-form li {
+#contactForm li {
   margin-bottom: 10px;
 }
 
@@ -207,11 +231,23 @@ textarea {
   height: 200px;
 }
 
-input[type=submit] {
+button {
   padding: 10px 30px;
   font-size: 18px;
   color: #ffffff;
   cursor: pointer;
-  background: #4aaaa5;
+  background: #04053a;
   border: 0 none;
+}
+/* .sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+} */
+#alert {
+background-color: hotpink;
 }
