--- a/main.css
+++ b/main.css
@@ -280,6 +280,14 @@ li {
     font-family: 'Shadows Into Light';
     
 }
+.landing-text h6::before{
+    content: "";
+    left: -21rem;
+    text-align: right;
+    min-width: 12rem;
+    font-size: 1.5rem;
+    color: white;
+}
 /* end header */
 
 /* start about */
@@ -321,7 +329,7 @@ li {
 }
 .fa-stack-overflow:hover {
     color: #ffe838;
-}
+} 
 .fa-linkedin:hover {
     color: #ea4c89;
 }
@@ -801,6 +809,7 @@ input[type="submit"] :hover {
     .landing-text h6{
         font-size: 1.4rem;
     }
+   
     .nav-link{
         font-size: 3.5rem;
     }
@@ -897,3 +906,25 @@ input[type="submit"] :hover {
         margin-left: 4rem;
     }
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(to bottom, rgb(73, 2, 70) , #cf0d06);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #fd57bf; 
+  }
